Fixed vertical align, cosmetif fixes

--- a/css/gators.css
+++ b/css/gators.css
@@ -27,6 +27,8 @@ board {
   top: 50%; left: 50%;
 }
 
+
+
 gator {
   width: 180px;
   height: 100px;
@@ -39,22 +41,22 @@ gator.short {
 }
 
 
-egg {
+egg, add-more {
   height: 27px;
   width: 40px;
 }
 
-add-more {
-  height: 27px;
-  width: 40px;
+add-more.primary {
+  height: 40.5px;
+  width: 60px;
 }
 
 gator svg:hover, egg svg:hover, add-more svg:hover {
   cursor: pointer;
-  -webkit-filter: brightness(1.1) drop-shadow(0 0 2px black);
-  -moz-filter: brightness(1.1) drop-shadow(0 0 2px black);
-  -ms-filter: brightness(1.1) drop-shadow(0 0 2px black);
-  filter: brightness(1.1) drop-shadow(0 0 2px black);
+  -webkit-filter: drop-shadow(0 0 2px black);
+  -moz-filter: drop-shadow(0 0 2px black);
+  -ms-filter: drop-shadow(0 0 2px black);
+  filter: drop-shadow(0 0 2px black);
 }
 
 .colored {
@@ -87,7 +89,7 @@ add-more {
 
 board-group egg,
 add-more {
-  padding: 10px;
+  margin: 10px;
 }
 
 board-group.col.hover > add-more,
@@ -97,12 +99,11 @@ board-group.col.hover > board-group.row > add-more {
 
 .dying  {
   transition: all 1.4s ease-in-out;
-  -webkit-filter: hue-rotate(720deg) brightness(5);
-  -moz-filter: hue-rotate(720deg) brightness(5);
-  -ms-filter: hue-rotate(720deg) brightness(5);
-  filter: hue-rotate(720deg) brightness(5);
-
   transform: translateY(20px) rotate(-180deg);
+}
+
+.dying .colored {
+  fill: #fff !important;
 }
 
 gator {
@@ -130,19 +131,18 @@ gator {
 
 
 board,
-board-group {
+board-group,
+egg, add-more {
   vertical-align: middle;
   text-align: center;
   white-space:nowrap;
 }
 
-board-group.row {
-  border: 1px solid transparent;
-}
 
 board-group.col board-group.row {
-  min-height: 3em;
-  min-width: 5em;
+  display: inline-block;
+  min-height: 47px;
+  min-width: 120px;
 }
 
 svg { pointer-events: none; }
@@ -150,8 +150,7 @@ svg g { pointer-events: all; }
 
 board-group.col {
   display: inline-block;
-  height: 100%;
-  border: 1px solid #eee;
+  border: 2px dashed #eee;
   border-radius: 20px;
   padding: 5px;
   margin: 5px;
@@ -169,6 +168,11 @@ board-group.hover.col {
   cursor: pointer;
   border-color: #beb;
   background: linear-gradient(0deg, #f3fff3, #fff);
+}
+
+board-group.hover.col:empty(.row) {
+  border-color: #ebb;
+  background: linear-gradient(0deg, #fff3f3, #fff);
 }
 
 .modal-overlay {
@@ -244,8 +248,6 @@ board-group.hover.col {
 
 .drag-placeholder {
   border: 1px dashed #7a7;
-  min-width: 5em;
-  min-height: 5em;
 }
 
 .collapsed * {
@@ -256,6 +258,10 @@ board-group.hover.col {
   border-radius: 20px;
   padding: 10px;
   background-color: #f77
+}
+
+.row::before {
+  width: 100px;
 }
 
 #family-modal i.fa:hover {
